services section added

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="hero-section-left">
                     <img src="images and logos/hero-section-image.jpg" alt=""class="herosection-left-img">
                 </div>
-                <div class="herosection-right">
+                <div class="hero-section-right">
                     <p class="herosection-right-para">50% OFF All Products</p>
                     <h2 class="herosection-right-heading">Enjoy Your Delicious Food</h2>
                     <p class="herosection-subheading">
@@ -31,6 +31,31 @@
                     </p>
 
                     <div class="herosection-button">Explore Now</div>
+                </div>
+            </div>
+
+            <div class="facilities">
+                <div class="discountvouch commonfacility">
+                  <div class="facility-image-1 facility-image"><img src="images and logos/discount-vouch.jpg" alt=""></div>
+                  <div class="facility-content">
+                    <div class="discount-heading facility-head">Discount Voucher</div>
+                    <p>Quisque velit nisi, pretium ut lacinia in df fasf</p>
+                  </div>
+                  
+                </div>
+                <div class="aboutfood commonfacility">
+                   <div class="facility-image-2 facility-image"><img src="images and logos/food-basket.jpg" alt=""></div>
+                   <div class="facility-content">
+                    <div class="food-quality-heading facility-head">Fresh Healthy Food</div>
+                    <p>Quisque velit nisi, pretium ut lacinia in df fasf</p>
+                  </div>
+                </div>
+                <div class="deliveryoptions commonfacility">
+                    <div class="facility-image-3 facility-image"><img src="images and logos/home-delivery.jpg" alt=""></div>
+                    <div class="facility-content ">
+                        <div class="delivery-heading facility-head">Fastest Home Delivery</div>
+                        <p>Quisque velit nisi, pretium ut lacinia in df fasf</p>
+                    </div>
                 </div>
             </div>
 
